<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".Register">

    <TextView
        android:id="@+id/appRegTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teach_code"
        android:textColor="#F7F2F2"
        android:textSize="30sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginRegText"
        android:layout_width="301dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_account"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appRegTitle" />

    <EditText
        android:id="@+id/fullNameRegEditText"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameRegView" />

    <EditText
        android:id="@+id/emailRegEditText"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegView" />

    <EditText
        android:id="@+id/passwordRegEditText"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegView" />

    <EditText
        android:id="@+id/phoneRegEditText"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneRegView" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="194dp"
        android:layout_height="67dp"
        android:layout_marginTop="68dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneRegEditText" />

    <TextView
        android:id="@+id/createRegText"
        android:layout_width="205dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <ProgressBar
        android:id="@+id/progressRegBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="74dp"
        android:layout_height="64dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRegText"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/fullNameRegView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/full_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginRegText" />

    <TextView
        android:id="@+id/emailRegView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameRegEditText" />

    <TextView
        android:id="@+id/passwordRegView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegEditText" />

    <TextView
        android:id="@+id/phoneRegView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegEditText" />

    <CheckBox
        android:id="@+id/checkBoxStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="I Am A Student"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneRegEditText" />

    <CheckBox
        android:id="@+id/checkBoxTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="I Am a Teacher"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneRegEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>